Fix for iFrame sizing on mobile.

--- a/VR-Accessibility.css
+++ b/VR-Accessibility.css
@@ -2,3 +2,11 @@ h1, h2 {
   background-color: #00274C;
   color: white;
 }
+
+iframe {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
